criação do webmvcconfig, controller, e classe dao e inicio da pagina index

--- a/eventos-webapp/.project
+++ b/eventos-webapp/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.qintess.eventos-webapp</name>
+	<name>eventos-webapp</name>
 	<comment></comment>
 	<projects>
 	</projects>
