--- a/eventos-webapp/pom.xml
+++ b/eventos-webapp/pom.xml
@@ -6,6 +6,7 @@
   <packaging>war</packaging>
   <properties>
   <spring>5.2.5.RELEASE</spring>
+   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
 
@@ -65,6 +66,14 @@
 	    <artifactId>jstl-api</artifactId>
 	    <version>1.2</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/jstl/jstl -->
+	<dependency>
+	    <groupId>jstl</groupId>
+	    <artifactId>jstl</artifactId>
+	    <version>1.2</version>
+	</dependency>
+	
 		
   </dependencies>
   <build>
